Add server managed swim sessions